--- a/style.css
+++ b/style.css
@@ -1,32 +1,103 @@
-/* Carousel */
+/* General */
 
 .container {
-  position: relative;
-  display: block;
-  border: 2px solid black;
-  height: 500px;
-  width: 800px;
-  float: none;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px;
+  width: 960px;
 }
+
+
+/* Header */
+
+.header {
+  background-color: rgba(255, 255, 255, 0.95);
+  border-bottom: 1px solid #ddd;
+  
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
+  
+  font-size: 20px;
+  padding: 15px;
+}
+
+
+/* Menu */ 
+
+.header .menu {
+  float: right;
+  list-style: none;
+  margin-top: 5px;
+}
+
+.menu > li {
+  display: inline;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.menu a {
+  color: #898989;
+}
+
+/* Dropdown */
+
+.dropdown-menu {
+  font-size: 16px;
+  margin-top: 5px;
+  min-width: 105px;
+}
+
+.dropdown-menu li a {
+  color: #898989;
+  padding: 6px 20px;
+  font-weight: 300;
+}
+
+/* Banner */
+
+  #banner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-bottom: 1px solid #ddd;
+  }
+
+    #banner h1 {
+  color: #363636;  
+  
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+
+  font-size: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+    }
+
+    #banner p {
+      letter-spacing: 0.225em;
+      text-transform: uppercase;
+      margin-top: 10px;
+      margin-bottom: 50px;
+    }
+
+
+/* Carousel */
 
 .slider {
   position: relative;
-  display: block;
-  height: 500px;
-  width: 800px;
-  float: none;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  height: 470px;
+  border-bottom: 1px solid #ddd;
 }
 
 .slide {
+  background: transparent url('images/transparentBackground.jpg') center center no-repeat;
+  background-size: cover;
   display: none;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .active-slide {
@@ -35,8 +106,10 @@
 
 .slide-copy h1 {
   color: #363636;  
-  font-family: sans-serif;
+  
+  font-family: 'Oswald', sans-serif;
   font-weight: 400;
+  
   font-size: 40px;
   margin-top: 105px;
   margin-bottom: 0px;
@@ -44,38 +117,84 @@
 
 .slide-copy h2 {
   color: #b7b7b7;
-  font-family: sans-serif;
+  
+  font-family: 'Oswald', sans-serif;
   font-weight: 400;
+  
   font-size: 40px;
   margin: 5px;
 }
 
 .slide-copy p {
   color: #959595;
-  font-family: serif;
+  font-family: Georgia, "Times New Roman", serif;
   font-size: 1.15em;
   line-height: 1.75em;
   margin-bottom: 15px;
   margin-top: 16px;
 }
 
-
+.slide-img {
+  text-align: right;
+}
 
 /* Slide feature */
 
-.slider-nav {
+.slide-feature {
   text-align: center;
-  margin-top: 50px;
+  background-image: url('images/nyc.jpg');
+  height: 470px;
 }
 
-.fa-angle-left {
+.slide-feature img {
+  margin-top: 112px;
+  margin-bottom: 28px;
+}
+
+.slide-feature h1 {
+  color: #FFFFFF;  
+  
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  
+  font-size: 60px;
+  margin-top: 105px;
+  margin-bottom: 10px;
+}
+
+.slide-feature h2 {
+  color: #b7b7b7;
+  
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  
+  font-size: 40px;
+  margin: 20px;
+}
+.slide-feature a {
+  display: block;
+  color: #6fc5e0;
+  
+  font-family: "HelveticaNeueMdCn", Helvetica, sans-serif;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  
+  font-size: 20px;
+}
+
+.slider-nav {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.arrow-prev {
   margin-right: 45px;
   display: inline-block;
   vertical-align: top;
   margin-top: 9px;
 }
 
-.fa-angle-right {
+.arrow-next {
   margin-left: 45px;
   display: inline-block;
   vertical-align: top;
