--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@
 .header {
   background-color: rgba(255, 255, 255, 0.95);
   border-bottom: 1px solid #ddd;
-  
   font-family: 'Oswald', sans-serif;
   font-weight: 300;
-  
   font-size: 20px;
+  letter-spacing: 0.20em;
   padding: 15px;
 }
 
@@ -24,7 +23,7 @@
 .header .menu {
   float: right;
   list-style: none;
-  margin-top: 5px;
+  margin-top: 15px;
 }
 
 .menu > li {
@@ -35,6 +34,8 @@
 
 .menu a {
   color: #898989;
+  text-decoration: none;
+
 }
 
 /* Dropdown */
@@ -49,47 +50,48 @@
   color: #898989;
   padding: 6px 20px;
   font-weight: 300;
+  text-decoration: none;
+
 }
 
 /* Banner */
 
-  #banner {
+#banner {
   position: relative;
-  width: 100%;
-  height: 100%;
   border-bottom: 1px solid #ddd;
-  }
+}
 
-    #banner h1 {
+#banner h1 {
   color: #363636;  
-  
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
-  text-transform: uppercase;
-
   font-size: 100px;
+  text-transform: uppercase;
   margin-top: 50px;
-  margin-bottom: 25px;
-    }
+  margin-bottom: 10px;
+}
 
-  #banner h2 {
+#banner h2 {
   color: #3399FF;  
-  
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
   text-transform: uppercase;
-
   font-size: 100px;
   margin-top: 10px;
   margin-bottom: 10px;
     }
 
-    #banner p {
-      letter-spacing: 0.225em;
-      text-transform: uppercase;
-      margin-top: 10px;
-      margin-bottom: 50px;
-    }
+#banner p {
+  letter-spacing: 0.225em;
+  text-transform: uppercase;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+#banner a {
+  text-decoration: none;
+
+}
 
 
 /* Carousel */
@@ -118,10 +120,8 @@
 
 .slide-copy h1 {
   color: #363636;  
-  
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
-  
   font-size: 40px;
   margin-top: 105px;
   margin-bottom: 0px;
@@ -165,10 +165,8 @@
 
 .slide-feature h1 {
   color: #FFFFFF;  
-  
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
-  
   font-size: 60px;
   margin-top: 105px;
   margin-bottom: 10px;
@@ -176,22 +174,20 @@
 
 .slide-feature h2 {
   color: #b7b7b7;
-  
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
-  
   font-size: 40px;
   margin: 20px;
 }
 .slide-feature a {
   display: block;
   color: #6fc5e0;
-  
   font-family: "HelveticaNeueMdCn", Helvetica, sans-serif;
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
-  
   font-size: 20px;
+  text-decoration: none;
+
 }
 
 .slider-nav {
@@ -230,3 +226,4 @@
 .slider-dots li.active-dot {
   color: #363636;
 }
+
